# cow

./: .gitignore  Cargo.toml  Cow.sqlproj  README.md
.github/workflows/: rust.yml
Ranking/Stored Procedures/: ProvideExp.sql
Ranking/Tables/: Server.sql
Security/: Cowboard.sql  Ranking.sql  RoleMemberships.sql  cow2.sql  cow_admin.sql  db_bot.sql
src/: main.rs
src/commands/: mod.rs
src/commands/cowboard/: cowboard_config.rs  cowboard_db.rs  cowboard_handler.rs  mod.rs
src/commands/general/: ban.rs  danbooru.rs  help.rs  info.rs  mod.rs  moogan.rs  rank.rs
src/commands/gpt/: ask.rs  dictionary.rs  mod.rs  openai.rs  openai_models.rs
src/commands/minecraft/: feed.rs  mod.rs  ping.rs  rcon.rs
src/commands/music/: mod.rs  music_commands.rs  spotify.rs
src/commands/rank_config/: diagnostics.rs  mod.rs  roles.rs
src/commands/timeout/: mod.rs  timeout_config.rs
src/commands/ucm/: calendar.rs  courses.rs  courses_db.rs  courses_db_models.rs  courses_old.rs  foodtrucks.rs  gym.rs  library.rs  map.rs  mod.rs  pav_models.rs  pavilion.rs  professors.rs  store.rs
src/commands/ucm/reminders/: course_reminders.rs  mod.rs
src/models/: config.rs  db_models.rs  macros.rs  minecraft_db_models.rs  mod.rs
src/services/: bot_init.rs  cow_framework.rs  database.rs  gpt_db.rs  interaction_handler.rs  map_download.rs  message_handler.rs  minecraft_db.rs  mod.rs
src/util/: duration.rs
