[package]
name = "cow"
description = "moo"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON parsing
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
# HTML parsing
scraper = "0.13.0"
# Async
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
# Logging
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-appender = "0.2.2"
# Time
chrono = "0.4.19"
# SQL Server
bb8 = "0.8.0"
bb8-tiberius = "0.13.0"
# Decimal data type (for SQL Server)
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
# HTTP Requests (for many of the UCM commarnds)
reqwest = { version = "0.11.10", features = ["json", "cookies"] }
# Primitive derivation
num-traits = "0.2.14"
num-derive = "0.3.3"
# Music stuff
songbird = { version = "0.3.0", default-features = false, features = ["serenity-rustls", "gateway"] }
lavalink-rs = { git = "https://github.com/DoggySazHi/lavalink-rs-moogan", branch = "master", features = ["rustls", "serenity", "songbird"] }
# lavalink-rs = { path = "../lavalink-rs", features = ["rustls", "serenity", "songbird"] }
# Literally in the name
regex = "1.5.5"
# Wait bruh enums can't be bits?
bitflags = "1.3.2"
# Traits aren't async?
async-trait = "0.1.53"
# Slash command framework
poise = { git = "https://github.com/DoggySazHi/poise-moogan", branch = "develop" }
# poise = { path = "../poise" }

# Discord API
[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "chrono",
    "gateway",
    "model",
    "utils",
    "collector",
    "rustls_backend",
    "unstable_discord_api", # For slash commands/components
    "voice"
]
version = "0.11.5"

# SQL Server
[dependencies.tiberius]
version = "0.11.0"
default-features = false
features = [
    "tds73",
    "chrono",
    "rust_decimal",
    "bigdecimal",
    "integrated-auth-gssapi",
    "winauth"
]
